data/derived/fa15/progs/unify/prog0013.ml.out
Characters 74-76:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type 'a but an expression was expected of type
         ('a -> 'a) list
       The type variable 'a occurs inside ('a -> 'a) list
